# systemd-glib

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  org.freedesktop.systemd1.Manager.xml  systemd-automount-iface.vala  systemd-device-iface.vala  systemd-glib-types.c  systemd-glib-types.h  systemd-glib.h  systemd-glib.pc.in  systemd-interfaces.vala  systemd-job-iface.vala  systemd-manager-iface.vala  systemd-mount-iface.vala  systemd-path-iface.vala  systemd-scope-iface.vala  systemd-service-iface.vala  systemd-slice-iface.vala  systemd-snapshot-iface.vala  systemd-socket-iface.vala  systemd-swap-iface.vala  systemd-target-iface.vala  systemd-timer-iface.vala  systemd-unit-iface.vala
